--- a/speakers.html
+++ b/speakers.html
@@ -1731,6 +1731,58 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Kampeta Pitchette Sayinzoga -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Pichette Sayinzoga.jpg" alt="Kampeta Pitchette Sayinzoga" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Kampeta Pitchette Sayinzoga</h3>
+                  <h4>Chief Executive Officer, Development Bank of Rwanda Plc</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalKampetaSayinzoga"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Ntoudi -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="finance">
+                <div class="speaker-image">
+                  <img src="img/speakers/Ntoudi.jpeg" alt="Ntoudi" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Ntoudi Mouyelo</h3>
+                  <h4>Founder, Lefa Foundation | Chairman, Africa Trust Corporation</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalNtoudi"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -3732,6 +3784,132 @@
                     </p>
                     <p>
                       Before joining ARQA Technologies, Ilya managed purchasing and marketing in various foreign companies engaged in the supply of mining equipment (including the United Republic of Tanzania).
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Kampeta Pitchette Sayinzoga -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalKampetaSayinzoga"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Pichette Sayinzoga.jpg"
+                    alt="Kampeta Pitchette Sayinzoga"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Kampeta Pitchette Sayinzoga</h3>
+                  <h4>Chief Executive Officer, Development Bank of Rwanda Plc</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Kampeta has 21 years of progressive professional experience as an international development practitioner in both public and private institutions within Rwanda and the East African Region focusing on designing and implementing reforms.
+                    </p>
+                    <p>
+                      She is currently the Chief Executive Officer of Development Bank of Rwanda Plc (BRD). As a public institution, BRD's financial development objectives is focused on providing private capital to the private sector in priority sectors of the economy (i.e. Agriculture, Education, Energy, Exports, Housing, climate change and Special Projects). Its aim is to be the driver of private sector lending and de-risking instruments and be the main financier of medium and long term private investment. For more than four decades, BRD has been the sole provider of long term concessional finance to the private sector and financial institutions and has facilitated the emergence of innovative private enterprises in priority sectors.
+                    </p>
+                    <p>
+                      Prior to joining the Bank, she was the Director General of the National Industrial Research and Development Agency under the Ministry of Trade and Industry. She served in the Ministry of Finance and Economic Planning for over a decade including 6 years as the Permanent Secretary and Secretary to the Treasury.
+                    </p>
+                    <p>
+                      Kampeta has also served on the Board of Directors of diverse institutions such as PTA/TDB Bank, the East African Development Bank, Rwanda Eurobond Committee, GT Bank, the National Capacity Building Secretariat, and Rwanda Revenue Authority. She currently serves on the Executive Committee of Rwanda Bankers Association and Economic Policy Research Network.
+                    </p>
+                    <p>
+                      She holds a Master's degree in Economic Development and Policy Analysis from University of Nottingham in the United Kingdom.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Ntoudi -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalNtoudi"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Ntoudi.jpeg"
+                    alt="Ntoudi"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Ntoudi Mouyelo</h3>
+                  <h4>International Banking & Finance Expert | Founder, Lefa Foundation | Chairman, Africa Trust Corporation</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Ntoudi bridges the worlds of international finance and African sports development. As Founder of Lefa Foundation and Chairman of Africa Trust Corporation, he's pioneering new ways to channel investment into Africa's sports sector while leveraging on trust and corporate services infrastructure primarily for the benefit of youth and women.
+                    </p>
+                    <p>
+                      He created Africa's first Sport Investment Label—a certification that helps sports organizations attract funding by proving they have solid governance and financial management. It's about making African sports a credible investment destination and building a sustainable sport industry.
+                    </p>
+                    <p>
+                      Previously, as Managing Director of Pawatech Africa (former Mchezo Limited), Ntoudi led the development of the iGaming operation across 17 African countries, with an innovative 'micro-share' issuance programs for thousands of loyal customers and the introduction of the Locker Room Bonus—a sponsorship model that pays athletes directly through digital payments.
+                    </p>
+                    <p>
+                      He also coordinated the launch of the Kigali International Financial Centre, working for Rwanda's ministry of finance to build a competitive financial services sector through extensive policy reforms and acting as the first Chief Investment Officer of Rwanda Finance.
+                    </p>
+                    <p>
+                      His career also spans Luxembourg and Singapore banking, where he worked in investment funds structuring, wealth management and capital markets before returning to Africa. He serves on boards of financial and sports organizations and holds degrees in Banking and Finance (Luxembourg School of Finance) and Engineering (École Polytechnique de Montréal in Canada).
                     </p>
                   </div>
                 </div>
