--- a/index.html
+++ b/index.html
@@ -1392,7 +1392,7 @@
           <div class="host-item">
             <span class="host-label">FEATURING</span>
             <img
-              src="img/core-img/esg-awards.png"
+              src="img/core-img/ESG-ASEA.jpeg"
               alt="Pan-Africa ESG Awards"
             />
           </div>
