--- a/speakers.html
+++ b/speakers.html
@@ -1783,6 +1783,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Jean Claude Uwizeyemungu -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="business">
+                <div class="speaker-image">
+                  <img src="img/speakers/Jean Claude Uwizeyemungu.jpg" alt="Jean Claude Uwizeyemungu" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Jean Claude Uwizeyemungu</h3>
+                  <h4>Founder & Managing Director, Mahwi Grain Millers Plc</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalJeanClaudeUwizeyemungu"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -3910,6 +3936,63 @@
                     </p>
                     <p>
                       His career also spans Luxembourg and Singapore banking, where he worked in investment funds structuring, wealth management and capital markets before returning to Africa. He serves on boards of financial and sports organizations and holds degrees in Banking and Finance (Luxembourg School of Finance) and Engineering (École Polytechnique de Montréal in Canada).
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Jean Claude Uwizeyemungu -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalJeanClaudeUwizeyemungu"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Jean Claude Uwizeyemungu.jpg"
+                    alt="Jean Claude Uwizeyemungu"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Jean Claude Uwizeyemungu</h3>
+                  <h4>Founder & Managing Director, Mahwi Grain Millers Plc</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Jean Claude Uwizeyemungu is an accomplished entrepreneur with over 20 years of experience spanning ICT, Distribution, and Manufacturing. As the Founder and Managing Director of Mahwi Grain Millers Plc, he has successfully steered the agro-processing company to remarkable growth, culminating in its listing on the Rwanda Stock Exchange within just six years of operations.
+                    </p>
+                    <p>
+                      Since establishing the company in 2018, Jean Claude has demonstrated exceptional leadership. He transformed Mahwi Grain Millers Plc from a startup with zero turnover to an enterprise generating over $10 million in turnover—a milestone that secured its approval to raise funds through the Rwanda Capital Market, with an outlook to turn it into a $30 million turnover company by 2030.
+                    </p>
+                    <p>
+                      Under his guidance, the company continues to expand its impact, creating over 250 direct jobs and benefiting countless households through its stakeholder network. His vision and strategic leadership have positioned Mahwi Grain Millers Plc as a success story in Rwanda's agro-processing sector and a model for capital market participation by SMEs.
                     </p>
                   </div>
                 </div>
