--- a/sponsors.html
+++ b/sponsors.html
@@ -871,6 +871,13 @@
                     class="sponsor-logo"
                   />
                 </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/mbea.jpg"
+                    alt="MBEA"
+                    class="sponsor-logo"
+                  />
+                </div>
               </div>
             </div>
           </div>
