--- a/speakers.html
+++ b/speakers.html
@@ -1809,6 +1809,58 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Chanda Chime-Katongo -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="banking">
+                <div class="speaker-image">
+                  <img src="img/speakers/Chanda C Katongo-3 (002) (002).jpg" alt="Chanda Chime-Katongo" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Chanda Chime-Katongo</h3>
+                  <h4>Executive Head of Client Solutions, ZANACO Bank</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalChandaChimeKatongo"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Louis BANGA NTOLO -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Louis Banga.jpg" alt="Louis BANGA NTOLO" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Louis BANGA NTOLO</h3>
+                  <h4>Managing Director, BVMAC</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalLouisBangaNtolo"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -3993,6 +4045,126 @@
                     </p>
                     <p>
                       Under his guidance, the company continues to expand its impact, creating over 250 direct jobs and benefiting countless households through its stakeholder network. His vision and strategic leadership have positioned Mahwi Grain Millers Plc as a success story in Rwanda's agro-processing sector and a model for capital market participation by SMEs.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Chanda Chime-Katongo -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalChandaChimeKatongo"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Chanda C Katongo-3 (002) (002).jpg"
+                    alt="Chanda Chime-Katongo"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Chanda Chime-Katongo</h3>
+                  <h4>Executive Head of Client Solutions, ZANACO Bank</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Chanda Chime-Katongo is a highly skilled banking professional with extensive industry experience spanning close to two decades. Furthermore, she has had the privilege of contributing her expertise to the boards of esteemed organisations in diverse roles. Currently, she holds the role of Executive Head of Client Solutions at ZANACO Bank in Zambia.
+                    </p>
+                    <p>
+                      She is an alumnus of the Harvard Business School Executive Program in Boston USA. She has a Global Executive MBA degree from the University of Manchester in the UK, a Bachelor of Business Studies from Greenwich University in the UK, and an Advanced Diploma from the Chartered Institute of Management Accountants (CIMA).
+                    </p>
+                    <p>
+                      She has obtained certification in Customer Service from the esteemed Disney Institute located in Florida, USA. She has also obtained certifications from the Leading Sustainable Corporations Programme and the Strategic Innovation Programme offered by the prestigious Said Business School at the University of Oxford in the UK.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Louis BANGA NTOLO -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalLouisBangaNtolo"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Louis Banga.jpg"
+                    alt="Louis BANGA NTOLO"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Louis BANGA NTOLO</h3>
+                  <h4>Managing Director, BVMAC (Bourse des Valeurs Mobilières de l'Afrique Centrale)</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Louis BANGA NTOLO started his banking career in 1999 in the Cameroonian subsidiary of Société Générale Group, where he held several positions of Head: Monetics, Treasury/ALM and Capital Markets, Director of Strategy, Marketing and Communication and, Deputy Managing Director between 2009 and 2018.
+                    </p>
+                    <p>
+                      He was actively involved in the establishment of the Treasury bill market in 2011 and the Cameroonian financial market within Société Générale Cameroon and was appointed by presidential decree, Member of the Financial Markets Commission, the national Financial Market Regulatory Authority.
+                    </p>
+                    <p>
+                      PhD in Banque, Monnaie et Financement from Université Lumières Lyon II - France, year 1998, Louis BANGA NTOLO is also vacancy lecturer at several Universities and Business Schools in Cameroon (Douala, Yaoundé SOA, IRIC, ESSEC, UCAC) in the Master's cycles since 2001.
+                    </p>
+                    <p>
+                      From October 2018 to December 2021, He was appointed Managing Director of Société Générale Capital Securities Central Africa, the brokerage company created by Société Générale Group in Central Africa the same year.
+                    </p>
+                    <p>
+                      Since January 2022, He is appointed Managing Director of BVMAC (Bourse des Valeurs Mobilières de l'Afrique Centrale), the Stock exchange company of the CEMAC zone.
                     </p>
                   </div>
                 </div>
