--- a/speakers.html
+++ b/speakers.html
@@ -1004,6 +1004,36 @@
             </div>
           </div>
 
+          <!-- Speaker - Hon. Mutesi Rusagara -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="government">
+              <div class="speaker-image">
+                <img src="img/speakers/Official picture Minister Tesi.jpg" alt="Mutesi Rusagara" />
+                
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Hon. Mutesi Rusagara</h3>
+                <h4>State Minister in charge of Resource Mobilization and Public Investment</h4>
+                <p></p>
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModalMutesiRusagara"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+
           <!-- Speaker 2 -->
             <!-- Speaker - Joe Kainja -->
             <div class="col-lg-3 col-md-6 col-sm-6">
@@ -1861,6 +1891,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Matthieu de Heering -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="capital-markets">
+                <div class="speaker-image">
+                  <img src="img/speakers/Montran (35)(1).png" alt="Matthieu de Heering" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Matthieu de Heering</h3>
+                  <h4>Global Head of Business Development, Capital Markets, Montran</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalMatthieuDeHeering"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -1952,6 +2008,62 @@
                       MIT (US), a Bachelor of Laws (LL.B) degree from the
                       University of Nairobi and is a member of the Institute of
                       Certified Public Accountants of Kenya (ICPAK).
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Hon. Mutesi Rusagara -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalMutesiRusagara"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img src="img/speakers/Official picture Minister Tesi.jpg" alt="Mutesi Rusagara" />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-globe"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Hon. Mutesi Rusagara</h3>
+                  <h4>State Minister in charge of Resource Mobilization and Public Investment, Ministry of Finance and Economic Planning, Rwanda</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Mutesi Rusagara is a Rwandan professional with a strong background in finance, innovation and economic development. In June 2024, she was appointed as the state minister in charge of Resource Mobilization and Public Investment at the Ministry of Finance and Economic Planning, Rwanda. In this role, she is responsible for identifying and analyzing strategic opportunities for profit-oriented public investments to drive Rwanda's economic growth and transformation.
+                    </p>
+                    <p>
+                      Before her ministerial appointment, Tesi served as the Chief Executive Officer of Agaciro Development Fund, Rwanda's sovereign wealth fund.
+                    </p>
+                    <p>
+                      Hon Tesi Rusagara holds an MBA from Stanford University and a Bachelor of Business Science in Finance from the University of Cape Town.
                     </p>
                   </div>
                 </div>
@@ -4165,6 +4277,66 @@
                     </p>
                     <p>
                       Since January 2022, He is appointed Managing Director of BVMAC (Bourse des Valeurs Mobilières de l'Afrique Centrale), the Stock exchange company of the CEMAC zone.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Matthieu de Heering -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalMatthieuDeHeering"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Montran (35)(1).png"
+                    alt="Matthieu de Heering"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Matthieu de Heering</h3>
+                  <h4>Global Head of Business Development, Capital Markets, Montran</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Matthieu de Heering is Montran's Global Head of Business Development, Capital Markets, since 2024. In this role, Matthieu leads Montran's business expansion across capital markets – into new products, technologies, geographies, segments, and industry initiatives.
+                    </p>
+                    <p>
+                      Prior to this, Matthieu was a member of Swift's EMEA leadership team, responsible for Central & Eastern Europe, CIS, and Data & Analytics. He previously served as a Director of Capital Markets Strategy, focusing on digital assets; and as Target2-Securities programme manager.
+                    </p>
+                    <p>
+                      Before SWIFT, Matthieu headed up the management information & statistics team for Bank of New York Global Custody.
+                    </p>
+                    <p>
+                      Matthieu is married, and a father of two.
                     </p>
                   </div>
                 </div>
